.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Plan_Suite__c.object
<CustomObject>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to match test plan suites from other platforms.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Number_of_Test_Cases__c</fullName>
        <formula>provar__Test_Suite__r.provar__Number_of_Test_Cases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Test Cases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Test_Plan__c</fullName>
        <label>Test Plan</label>
        <referenceTo>provar__Test_Plan__c</referenceTo>
        <relationshipLabel>Test Suites</relationshipLabel>
        <relationshipName>Test_Plan_Suites</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Suite__c</fullName>
        <label>Test Suite</label>
        <referenceTo>provar__Test_Suite__c</referenceTo>
        <relationshipLabel>Test Plans</relationshipLabel>
        <relationshipName>Test_Plan_Suites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Plan Suite</label>
    <nameField>
        <displayFormat>TPS-{0000000}</displayFormat>
        <label>Test Plan Suite Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plan Suites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>